OGC API Records code improvements